# blackscript

./: Cargo.toml  README.md
src/: main.rs  styles.rs
src/widgets/: textarea.rs
